[package]
name = "mai"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny_http = "0.10"
tokio = { version = "1.6", features = ["rt-multi-thread", "macros"] }
twilight-http = "0.9"
twilight-model = "0.9"
mail-parser = "0.4"
sled = { version = "0.34.7", features = ["compression"] }
lazy_static = "1"
twilight-embed-builder = "0.9.0"
truncrate = "0.1.3"
regex = "1.5.4"